Fix overlap proposal images with signin btn

--- a/app/assets/stylesheets/proposals.scss
+++ b/app/assets/stylesheets/proposals.scss
@@ -303,6 +303,7 @@
   }
 
   .vote-btn{
+    clear: both;
     font-size: 1rem;
     text-transform: uppercase;
     font-weight: 600;
